package tugas;

public interface Sound {
  void makeSound();
}
