@startuml PetStoreApp
skinparam classAttributeIconSize 0

interface Sound {
    + makeSound(): void
}

abstract class Animal {
    - name: String
    - price: double
    + static totalAnimals: int
    + Animal(name: String, price: double)
    + abstract displayInfo(): void
    + final sell(): void
}

class Dog extends Animal implements Sound {
    - breed: String
    + Dog(name: String, price: double, breed: String)
    + displayInfo(): void
    + makeSound(): void
}

class Cat extends Animal implements Sound {
    - color: String
    + Cat(name: String, price: double, color: String)
    + displayInfo(): void
    + makeSound(): void
}

class PetStore {
    - animals: Animal[]
    - count: int
    + PetStore(capacity: int)
    + addAnimal(animal: Animal): void
    + displayAnimals(): void
}

Animal <|-- Dog
Animal <|-- Cat
Sound <|.. Dog
Sound <|.. Cat
PetStore o-- Animal

@enduml
